also reposition item-edit cursor

2002-04-04  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/gnumeric-pane.c (gnm_pane_reposition_cursors) : also
	  reposition item-edit cursor
	  http://bugzilla.gnome.org/show_bug.cgi?id=77321